# OrderApp

./: App.cpp  CMakeLists.txt  CheckoutState.h  DEFINITIONS.h  InputManager.cpp  InputManager.h  MainMenuState.cpp  MainMenuState.h  OptionsState.cpp  OptionsState.h  README.md  UML.vpp  app.h  main.cpp  statemachine.cpp  statemachine.h  states.h
